Scrolling and potential top-bar overlap fix

--- a/src/styles/Squidink/Skeleton.scss
+++ b/src/styles/Squidink/Skeleton.scss
@@ -1,9 +1,4 @@
-.navbar {
-  position: fixed !important;
-  top: 0 !important;
-  width: 100% !important;
-  z-index: 11 !important;
-}
+
 .grid-container-custom {
   display: inline-grid;
   background: #dce3e6;
